--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,12 +6,15 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Install Xcode tools
-        run: xcode-select --install
+      
+      - name: Set Xcode path (GitHub Runner已预装Xcode)
+        run: sudo xcode-select -s /Applications/Xcode.app/Contents/Developer
+      
       - name: Build dictionary
         run: |
           mkdir -p ~/Desktop/OutputDict
-          dictbuild -o ~/Desktop/OutputDict -i ./Index.xml -b ./Body.html -p ./Info.plist
+          /Applications/Xcode.app/Contents/Developer/usr/bin/dictbuild -o ~/Desktop/OutputDict -i ./Index.xml -b ./Body.html -p ./Info.plist
+      
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
