--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,22 +7,22 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       
-      - name: Install Dictionary Development Kit
+      - name: Install Dictionary Development Kit（用公开镜像）
         run: |
-          # 下载Xcode附加工具（包含Dictionary Development Kit）
-          curl -L -o AdditionalTools.dmg "https://developer.apple.com/services-account/download?path=/Developer_Tools/Additional_Tools_for_Xcode_15/Additional_Tools_for_Xcode_15.dmg"
-          # 挂载镜像
-          hdiutil attach AdditionalTools.dmg
-          # 安装Dictionary Development Kit
-          sudo cp -R "/Volumes/Additional Tools/Dictionary Development Kit/" /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/
+          # 下载公开可访问的Additional Tools镜像（包含Dictionary Development Kit）
+          curl -L -o AdditionalTools.dmg "https://github.com/phracker/MacOSX-SDKs/releases/download/10.15/Additional_Tools_for_Xcode_12.dmg"
+          # 挂载镜像（忽略验证，适配公开镜像）
+          hdiutil attach AdditionalTools.dmg -noverify
+          # 复制Dictionary Development Kit到Xcode工具目录
+          sudo cp -R "/Volumes/Additional Tools/Dictionary Development Kit/" /Applications/Xcode.app/Contents/Developer/
           # 卸载镜像
           hdiutil detach "/Volumes/Additional Tools"
       
       - name: Build dictionary
         run: |
           mkdir -p ~/Desktop/OutputDict
-          # 使用安装后的dictbuild工具
-          /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/Dictionary\ Development\ Kit/bin/dictbuild -o ~/Desktop/OutputDict -i ./Index.xml -b ./Body.html -p ./Info.plist
+          # 调用安装后的dictbuild工具
+          /Applications/Xcode.app/Contents/Developer/Dictionary\ Development\ Kit/bin/dictbuild -o ~/Desktop/OutputDict -i ./Index.xml -b ./Body.html -p ./Info.plist
       
       - name: Upload artifact
         uses: actions/upload-artifact@v4
